Add dependencies for BabelNet

--- a/config/babelnet.var.properties
+++ b/config/babelnet.var.properties
@@ -6,13 +6,16 @@
 #
 # example:
 #
-babelnet.dir=~/BABELNET/babelnet
+# SET THIS PROPERTY FOR USE OFFLINE BABELNET
+# babelnet.dir=~/BABELNET/babelnet
 
 # BabelNet key
 #
 # example:
 #
-babelnet.key=your_key
+# THIS API KEY ASSOCIATED WITH 'ALEXEY PISMAK' ACCOUNT
+# PLEASE, DON'T SPAM BABELNET SERVERS
+babelnet.key=31242729-9cf9-4d94-8f20-95e0eaf240d1
 
 # BabelNet RESTFul service url
 #
