--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
     <repositories>
         <repository>
             <id>tuneit-public-repo</id>
-            <name>tuneit public repo</name>
             <url>https://nexus.tune-it.ru/repository/tuneit-public-repo/</url>
+        </repository>
+        <repository>
+            <id>Jackalope</id>
+            <url>http://maven.elcom.spb.ru/content/repositories/jackalope/</url>
         </repository>
     </repositories>
 
@@ -64,23 +67,44 @@
 
     <dependencies>
 
+        <!-- COMMON -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
 
-        <dependency>
-            <groupId>babelnet</groupId>
-            <artifactId>api</artifactId>
-            <version>4.0.1</version>
-        </dependency>
 
+        <!-- CUSTOM TUNE-IT LIBs -->
         <dependency>
             <groupId>com.tuneit.jackalope</groupId>
             <artifactId>spring-boot-groovy-starter</artifactId>
             <version>1.0.0.RELEASE</version>
         </dependency>
+
+
+        <!-- PARTS OF BABEL_NET, UPLOADED TO NEXUS  -->
+        <dependency>
+            <groupId>babelnet</groupId>
+            <artifactId>api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>babelnet</groupId>
+            <artifactId>jlt</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>babelnet</groupId>
+            <artifactId>babelscape-common</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>babelnet</groupId>
+            <artifactId>jwi</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+
 
         <!-- BABEL_NET DEPENDENCIES -->
         <dependency>
@@ -99,9 +123,22 @@
             <version>1.9</version>
         </dependency>
         <dependency>
-            <groupId>babelnet</groupId>
-            <artifactId>jlt</artifactId>
-            <version>2.4</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+
+        <!--  JACKALOPE DEPENDENCIES  -->
+        <dependency>
+            <groupId>com.tuneit</groupId>
+            <artifactId>dict-it-wiki</artifactId>
+            <version>SNAPSHOT-2.0_02</version>
         </dependency>
 
     </dependencies>
