--- a/config/babelnet.var.properties
+++ b/config/babelnet.var.properties
@@ -10,12 +10,7 @@
 # babelnet.dir=~/BABELNET/babelnet
 
 # BabelNet key
-#
-# example:
-#
-# THIS API KEY ASSOCIATED WITH 'ALEXEY PISMAK' ACCOUNT
-# PLEASE, DON'T SPAM BABELNET SERVERS
-babelnet.key=31242729-9cf9-4d94-8f20-95e0eaf240d1
+babelnet.key=***
 
 # BabelNet RESTFul service url
 #
