--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@
 # OVERRIDE PATH
 #
 # jackalope.wiki.export.path=/home/alex/wiki/export/
+
+#logging.level.com.tuneit.jackalope.utils.groovy=TRACE
+#logging.level.org.springframework.boot.autoconfigure=DEBUG
