--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,11 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tineit.jackalope</groupId>
+    <groupId>com.tuneit.jackalope</groupId>
     <artifactId>babelnet-integration</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>BabelNet Integration</name>
     <packaging>jar</packaging>
-
-    <repositories>
-        <repository>
-            <id>tuneit-public-repo</id>
-            <url>https://nexus.tune-it.ru/repository/tuneit-public-repo/</url>
-        </repository>
-        <repository>
-            <id>Jackalope</id>
-            <url>http://maven.elcom.spb.ru/content/repositories/jackalope/</url>
-        </repository>
-    </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,8 +33,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>9</source>
+                    <target>9</target>
                 </configuration>
             </plugin>
 
@@ -53,9 +42,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
-                <configuration>
-                    <skipTests>${skipTests}</skipTests>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -64,7 +50,17 @@
         </plugins>
     </build>
 
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.9.2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
 
         <!-- COMMON -->
@@ -77,32 +73,38 @@
 
         <!-- CUSTOM TUNE-IT LIBs -->
         <dependency>
-            <groupId>com.tuneit.jackalope</groupId>
-            <artifactId>spring-boot-groovy-starter</artifactId>
-            <version>1.0.0.RELEASE</version>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-core</artifactId>
+            <version>5.1.0.RELEASE</version>
         </dependency>
-
-
         <!-- PARTS OF BABEL_NET, UPLOADED TO NEXUS  -->
         <dependency>
-            <groupId>babelnet</groupId>
-            <artifactId>api</artifactId>
-            <version>4.0.1</version>
+            <groupId>com.tuneit</groupId>
+            <artifactId>babelnet-api</artifactId>
+            <version>5.3</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/babelnet-api-5.3.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>babelnet</groupId>
+            <groupId>com.tuneit</groupId>
             <artifactId>jlt</artifactId>
-            <version>2.4</version>
+            <version>2.6.4</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/lcl-jlt-2.6.4.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>babelnet</groupId>
-            <artifactId>babelscape-common</artifactId>
-            <version>1.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.7.0</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/commons-beanutils-1.7.0.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>babelnet</groupId>
+            <groupId>com.tuneit</groupId>
             <artifactId>jwi</artifactId>
             <version>2.2.3</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/jwi-2.2.3.jar</systemPath>
         </dependency>
 
 
@@ -110,7 +112,9 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.1-jre</version>
+            <version>23.0</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/guava-23.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>commons-configuration</groupId>
@@ -120,12 +124,28 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.8</version>
+            <version>4.3.6</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/httpclient-4.3.6.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.3.3</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/httpcore-4.3.3.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <version>2.8.2</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/gson-2.8.2.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.5</version>
         </dependency>
 
         <!-- BABEL_NET OFFLINE DEPENDENCIES -->
@@ -133,38 +153,126 @@
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
             <version>7.2.0</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/lucene-core-7.2.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queries</artifactId>
             <version>7.2.0</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/lucene-queries-7.2.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queryparser</artifactId>
             <version>7.2.0</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/lucene-queryparser-7.2.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-sandbox</artifactId>
             <version>7.2.0</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/lucene-sandbox-7.2.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-analyzers-common</artifactId>
             <version>7.2.0</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/lucene-analyzers-common-7.2.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j</artifactId>
             <version>56.1</version>
+            <scope>system</scope>
+            <systemPath>${user.home}/.m2/repository/com/tuneit/babelnet/lib/icu4j-56.1.jar</systemPath>
         </dependency>
 
         <!--  JACKALOPE DEPENDENCIES  -->
         <dependency>
             <groupId>com.tuneit.jackalope</groupId>
             <artifactId>api-lite</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tuneit.jackalope</groupId>
+            <artifactId>ltf</artifactId>
             <version>1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tuneit.jackalope</groupId>
+            <artifactId>ltf-converter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.1.4.RELEASE</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.9.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.9.2</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
